--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
   <meta name="google-site-verification" content="2BtP1Mja7w9OGuCfMyXG1VBKLx0CukxUUB41XRIfoGo" />
-<title>Khalga Full Movie Hindi Download Filmyzilla, mp4moviez, 480p, 720p, 1080p-300MB in HD Direct Link</title>
+<title>Khalga Full Movie Marathi Download Filmyzilla, mp4moviez, 480p, 720p, 1080p-300MB in HD Direct Link</title>
 </head>
 <body>
-<h1>Khalga Full Movie Hindi Download Filmyzilla, mp4moviez, 480p, 720p, 1080p-300MB in HD Direct Link</h1>
-<p>khalga movie download LINK: https://leomovieguru.pages.dev/ mp4moviez khalga movie download filmyzilla khalga movie download filmyhit khalga movie download okjatt khalga movie download vegamovies khalga movie download mp4moviez filmyzilla khalga movie download bolly4u khalga movie download filmywap khalga movie download 720p khalga movie download in hindi</p>
+<h1>Khalga Full Movie Marathi Download Filmyzilla, mp4moviez, 480p, 720p, 1080p-300MB in HD Direct Link</h1>
+<p>khalga movie download LINK: https://leomovieguru.pages.dev/ mp4moviez khalga movie download filmyzilla khalga movie download filmyhit khalga movie download okjatt khalga movie download vegamovies khalga movie download mp4moviez filmyzilla khalga movie download bolly4u khalga movie download filmywap khalga movie download 720p khalga movie download in marathi</p>
 </body>
 </html>
